# rpc-streaming-prototype

./: .dockerignore  .env.example  .gitignore  .prettierrc  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init.sh  post-create.sh  post-start.sh  setup-env.sh
.github/workflows/: build-image.yaml  ci.yaml  ci.yml
.specify/memory/: constitution.md
docker/: backend.Dockerfile  frontend.Dockerfile
envoy/: envoy.yaml
frontend/: angular.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: styles.scss
frontend/src/app/: app.routes.ts  app.spec.ts
frontend/src/app/core/services/: approval.service.spec.ts  approval.service.ts  session-state.service.spec.ts  session-state.service.ts
frontend/src/app/features/join-session/: join-session.component.html  join-session.component.scss  join-session.component.spec.ts  join-session.component.ts
frontend/src/app/features/session/: session.component.html  session.component.scss  session.component.spec.ts  session.component.ts
frontend/src/app/features/session/components/connection-status/: connection-status.component.spec.ts  connection-status.component.ts
frontend/src/app/features/session/components/decision-panel/: decision-panel.component.html  decision-panel.component.scss  decision-panel.component.spec.ts  decision-panel.component.ts
frontend/src/app/features/session/components/history-panel/: history-panel.component.html  history-panel.component.scss  history-panel.component.spec.ts  history-panel.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
prds/: requirements.md
protos/: approval_request.proto  approval_service.proto  session.proto
protos/proposal/v1/: proposal.proto  proposal_service.proto  session.proto
rpc_stream_prototype/: __init__.py  settings.py
rpc_stream_prototype/backend/: __init__.py  logging.py  main.py
rpc_stream_prototype/backend/events/: __init__.py  broadcaster.py  proto_broadcaster.py
rpc_stream_prototype/backend/models/: __init__.py  domain.py
rpc_stream_prototype/backend/services/: approval_service.py  proposal_service.py
rpc_stream_prototype/backend/storage/: __init__.py  exceptions.py  memory_store.py  repository.py  session_store.py
rpc_stream_prototype/cli/: app.py  main.py
rpc_stream_prototype/cli/client/: __init__.py  grpc_client.py
rpc_stream_prototype/cli/session/: __init__.py  proposal_loop.py
rpc_stream_prototype/cli/ui/: __init__.py  console.py  display.py  prompts.py
rpc_stream_prototype/shared/: logging_config.py
scripts/: check_quality.sh  gen_protos.sh  presubmit.sh
specs/001-approval-workflow/: plan.md  spec.md  tasks.md
specs/001-approval-workflow/checklists/: requirements.md
tests/: conftest.py
tests/fixtures/: fake_proposal_client.py
tests/integration/: test_server_e2e.py
tests/unit/: test_cli.py
tests/unit/backend/: __init__.py  test_broadcaster.py  test_domain.py  test_memory_store.py  test_proposal_service.py  test_proto_broadcaster.py  test_session_store.py
tests/unit/cli/: test_display.py  test_grpc_client.py  test_prompts.py  test_proposal_loop.py
