[project]
name = "rpc-stream-prototype"
version = "0.1.0"
description = "Proto-type of shared session communication using gRPC streaming across two clients"
authors = [
    { name = "Kevin Aud" }
]
requires-python = ">=3.14"
dependencies = [
  "python-dotenv>=1.0.1",
  "typer>=0.12.5",
  "rich>=13.8.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.12.0",
  "structlog>=25.5.0",
  "tenacity>=9.1.2",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pyright>=1.1.407",
    "ruff>=0.14.7",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "specify-cli>=1.0.0",
]

[project.scripts]
rpc-stream-prototype = "rpc_stream_prototype.cli.app:app"

[tool.setuptools]
packages = ["rpc_stream_prototype"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateImportUsage = false
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportMissingTypeArgument = false
reportAttributeAccessIssue = false
reportPrivateUsage = false
reportRedeclaration = false
reportUnusedClass = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require API keys, slower)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
